--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="settings_button">Settings</string>
     <string name="profile_button">Profile</string>
     <string name="Welcome_back">Welcome Back!</string>
+    <string name="btn_create_account">Create Account</string>
 </resources>
