--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,7 @@
     <string name="profile_button">Profile</string>
     <string name="Welcome_back">Welcome Back!</string>
     <string name="btn_create_account">Create Account</string>
+    <string name="background_desc">Background image of the app</string>
+    <string name="welcome_user">Welcome, User!</string>
+    <string name="tap_to_continue">Tap anywhere to continue</string>
 </resources>
